--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Toolbar
         android:id="@+id/toolbar"
@@ -19,109 +20,81 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/settings_text"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/settings_title" />
-
     </Toolbar>
 
-    <LinearLayout
-        android:id="@+id/li_current_login"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_current_login_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/settings_page_margin"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:layout_marginTop="@dimen/settings_middle_margin"
+        android:text="@string/current_login_title"
+        android:textColor="@color/black"
+        android:textSize="@dimen/settings_page_title" />
 
-        <TextView
-            android:id="@+id/tv_current_login_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/current_login_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/settings_page_title" />
-
-        <TextView
-            android:id="@+id/tv_current_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/settings_page_subtitle" />
-
-        <ImageView
-            android:id="@+id/iv_barcode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/li_change_environment"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_current_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/settings_page_margin"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/li_current_login">
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:textSize="@dimen/settings_page_subtitle" />
 
-
-        <View
-            android:id="@+id/vw_splitter"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/splitter_height"
-            android:background="@color/header_grey" />
-
-        <TextView
-            android:id="@+id/tv_change_environment_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/settings_middle_margin"
-            android:text="@string/change_environment_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/settings_page_title" />
-
-        <TextView
-            android:id="@+id/tv_change_environment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/settings_middle_margin"
-            android:textSize="@dimen/settings_page_subtitle" />
-
-
-        <View
-            android:id="@+id/vw_splitter_two"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/splitter_height"
-            android:background="@color/header_grey" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/li_logout"
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/iv_barcode"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/settings_page_margin"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/li_change_environment">
+        android:layout_gravity="center" />
 
-        <TextView
-            android:id="@+id/tv_logout_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/logout"
-            android:textColor="@color/black"
-            android:textSize="@dimen/settings_page_title" />
+    <View
+        android:id="@+id/vw_splitter"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/splitter_height"
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:layout_marginTop="@dimen/settings_middle_margin"
+        android:background="@color/header_grey" />
 
-        <TextView
-            android:id="@+id/tv_logout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/logout_desc"
-            android:textSize="@dimen/settings_page_subtitle" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_change_environment_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:layout_marginTop="@dimen/settings_middle_margin"
+        android:text="@string/change_environment_title"
+        android:textColor="@color/black"
+        android:textSize="@dimen/settings_page_title" />
 
+    <TextView
+        android:id="@+id/tv_change_environment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:textSize="@dimen/settings_page_subtitle" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/vw_splitter_two"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/splitter_height"
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:layout_marginTop="@dimen/settings_middle_margin"
+        android:background="@color/header_grey" />
+
+    <TextView
+        android:id="@+id/tv_logout_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:layout_marginTop="@dimen/settings_middle_margin"
+        android:text="@string/logout"
+        android:textColor="@color/black"
+        android:textSize="@dimen/settings_page_title" />
+
+    <TextView
+        android:id="@+id/tv_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_middle_margin"
+        android:text="@string/logout_desc"
+        android:textSize="@dimen/settings_page_subtitle" />
+</androidx.appcompat.widget.LinearLayoutCompat>
